--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     Bloque
     Elemento
     Modificador
--->><!DOCTYPE html>
+--><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
